# imogrify

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  imogrify_application.manifest  meson.build  meson.options  vcpkg.json  vcpkg.json.license
.github/workflows/: build-system.yml  build-vcpkg.yml  ci.yml  ci_system.yml  ci_vcpkg.yml  clang-format-check.yml  cpp-linter.yml
cmake/: clang_format.cmake  clang_tidy.cmake  compiler_compatibility.cmake  compiler_options.cmake  compiler_support.cmake  compiler_warnings.cmake  dependency_data.cmake  operative_system_options.cmake  operative_system_support.cmake  options.cmake
cmake/custom_vcpkg/ports/: LICENSE_vcpkg  README_ports.md
cmake/custom_vcpkg/ports/cpuid/: fix_build.patch  portfile.cmake  vcpkg.json
cmake/custom_vcpkg/ports/imfy-libpng-ng/: always_use_prebuilt_pnglibconf.patch  fix-export-targets.patch  imfy_always_use_prebuilt_pnglibconf.patch  pnglibconf_tweaks.patch  portfile.cmake  vcpkg.json
cmake/custom_vcpkg/ports/imfy-libspng-ng/: vcpkg.json
cmake/custom_vcpkg/ports/imfy-zlib-ng/: portfile.cmake  vcpkg.json
cmake/custom_vcpkg/triplets/: imfy-x64-linux-clang.cmake  imfy-x64-linux-gcc.cmake  imfy-x64-windows-msvc.cmake
cmake/custom_vcpkg/triplets/toolchains/: clang.toolchain.cmake  linux-clang.toolchain.cmake  linux-gcc.toolchain.cmake  x64-linux-clang.toolchain.cmake
cmake/dependencies/: catch2.cmake  cli11.cmake  concurrentqueue.cmake  cpu_features.cmake  doctest.cmake  enchantum.cmake  fmt.cmake  highway.cmake  libassert.cmake  libcpuid.cmake  libpng.cmake  libspng.cmake  lodepng.cmake  magic_enum.cmake  nanobench.cmake  tl-expected.cmake  vcpkg.cmake  zlib.cmake
cmake/vcpkg/: README.md
cmake/vcpkg/toolchains/: x64-linux-clang.toolchain.cmake
cmake/vcpkg/triplets/: imfy-x64-linux-clang.cmake  imfy-x64-linux-gcc.cmake  imfy-x64-windows-msvc.cmake
imogrify/: CMakeLists.txt
imogrify/app/: CMakeLists.txt
imogrify/app/src/: main.cpp
imogrify/arguments/: CMakeLists.txt
imogrify/arguments/include/imfy/: arguments.hpp  arguments_definition.hpp  arguments_parse.hpp
imogrify/arguments/src/: arguments.cpp  arguments_parse.cpp
imogrify/core/: CMakeLists.txt
imogrify/core/include/imfy/: assert.hpp  build.hpp.in  character.hpp  concurrent_queue.hpp  exit_status.hpp  fundamental.hpp  platform.hpp  runtime.hpp  thread.hpp  version.hpp
imogrify/core/src/: platform.cpp  runtime.cpp  thread.cpp
imogrify/pipeline/: CMakeLists.txt
imogrify/pipeline/include/imfy/: log_queue.hpp  pipeline.hpp
imogrify/pipeline/src/: log_queue.cpp  pipeline.cpp
imogrify/report/: CMakeLists.txt
imogrify/report/include/imfy/: concurrent_queue.hpp  log_level.hpp  logger.hpp  report_level.hpp  report_queue.hpp  report_utility.hpp
imogrify/report/src/: logger.cpp  report_level.cpp  report_queue.cpp  report_utility.cpp
imogrify/unit_tests/: CMakeLists.txt
imogrify/unit_tests/src/: imogrify_tests_main.cpp  test_preprocessor_defines.cpp
imogrify/unit_tests/src/arguments/: test_arguments_definition.cpp
imogrify/unit_tests/src/core/: test_build.cpp  test_character.cpp  test_exit_status.cpp  test_thread.cpp  test_version.cpp
imogrify/unit_tests/src/pipeline/: test_log_queue.cpp  test_pipeline.cpp
imogrify/unit_tests/src/report/: test_logger.cpp  test_report_queue.cpp
imogrify/unit_tests/src/worker/: test_reporter.cpp  test_supervisor.cpp
imogrify/worker/: CMakeLists.txt
imogrify/worker/include/imfy/: reporter.hpp  supervisor.hpp  worker.hpp
imogrify/worker/src/: reporter.cpp  supervisor.cpp
src/: CMakeLists.txt
src/app/: imogrify.cpp  meson.build
src/core/: CMakeLists.txt  aligned_allocation.cpp  character_encoding.cpp  encoding.cpp  filesystem.cpp  markdown.cpp  meson.build  runtime.cpp  runtime_no_cpuid.cpp
src/core/include/imfy/: aligned_allocation.hpp  aligned_span.hpp  allocator.hpp  assert.hpp  attributes.hpp  build.hpp.in  character_encoding.hpp  concepts.hpp  encoding.hpp  filesystem.hpp  markdown.hpp  memory_block.hpp  meson.build  runtime.hpp  string.hpp  vector.hpp
src/image/: CMakeLists.txt  png.cpp  png_encoder.cpp  png_format.cpp  raw_image.cpp
src/image/include/imfy/: image_format.hpp  image_size.hpp  png.hpp  png_encoder.hpp  png_format.hpp  raw_image.hpp
src/imogrify/: CMakeLists.txt  imogrify.cpp  meson.build
src/imogrify_benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_execution.cpp  benchmark_images.cpp  benchmark_output.cpp  imogrify_benchmark.cpp  png_benchmark.cpp  png_encode_libpng.cpp  png_encode_lodepng.cpp  png_encode_spng.cpp  png_lodepng.cpp  png_spng.cpp
src/imogrify_benchmark/include/imfy/: benchmark.hpp  benchmark_definition.hpp  benchmark_execution.hpp  benchmark_images.hpp  benchmark_output.hpp  benchmark_parameters.hpp  benchmark_result.hpp  png_benchmark.hpp  png_encode_libpng.hpp  png_lodepng.hpp  png_spng.hpp
subprojects/: nowide.wrap
tests/: CMakeLists.txt  meson.build  preprocessor_definitions_test.cpp  tests_main.cpp
tests/core/: aligned_allocation_test.cpp  aligned_span_test.cpp  build_test.cpp  concepts_test.cpp  markdown_test.cpp  memory_block_test.cpp  runtime_test.cpp
tests/image/: image_size_test.cpp  png_format_test.cpp  raw_image_test.cpp
